--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav><ul>
+		<li><a href="link">Home</a></li>
+		<li><a href="link">About us</a></li>
+		<li><a href="link">Contact us</a></li>
+	</ul></nav>
+
+	<section>
+		<h1>3 random images</h1>
+		<img src="https://picsum.photos/id/123/200/300"  alt="Random image" />
+		<img src="https://picsum.photos/id/124/200/300" alt="Random image"/>
+		<img src="https://picsum.photos/id/125/200/300" alt="Random image"/>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
